--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,8 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
+   font-family: "Barlow",  "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,27 +10,32 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
-a:hover {
-  color: #535bf2;
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-
+html{
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Barlow", "Helvetica Neue", sans-serif ;
+  font-weight: 100;
+  letter-spacing: 0.2em;
+  line-height: 1.3;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
-
 
 /* From Uiverse.io by doniaskima */ 
 .btn-17,
@@ -58,7 +59,7 @@ h1 {
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: 100%;
-  font-weight: 900;
+  font-weight: 600;
   line-height: 1.5;
   margin: 0;
   -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
@@ -177,3 +178,4 @@ border: 3px solid #eee !important;
 .btn-17:hover:after {
   --progress: -102%;
 }
+
