update Header & Footer

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
-   font-family: "Barlow",  "Helvetica Neue", sans-serif;
+  font-family: "Barlow", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
@@ -12,23 +12,32 @@
 a {
   text-decoration: none;
 }
-ul{
+
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-html{
+
+html {
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Barlow", "Helvetica Neue", sans-serif ;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Barlow", "Helvetica Neue", sans-serif;
   font-weight: 100;
   letter-spacing: 0.2em;
   line-height: 1.3;
@@ -37,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
-/* From Uiverse.io by doniaskima */ 
+/* From Uiverse.io by doniaskima */
 .btn-17,
 .btn-17 *,
 .btn-17 :after,
@@ -85,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-17 {
-border: 3px solid #eee !important;
+  border: 3px solid #eee !important;
   border-width: 2px;
   padding: 0.8rem 3rem;
   z-index: 0;
@@ -178,4 +187,3 @@ border: 3px solid #eee !important;
 .btn-17:hover:after {
   --progress: -102%;
 }
-
