--- a/src/style/Footer.module.css
+++ b/src/style/Footer.module.css
@@ -1,46 +1,68 @@
+.footer {
+  font-family: "Barlow", sans-serif;
+  position: relative;
+  top: 550px;
+  background-color: #000;
+  color: #fff;
+  width: 100%;
 
- .footer{
-    position:relative;
-    top:550px;
-    background-color: #000;
-    color:#fff;
-    width: 100%;
-    height:200px;
-    padding: 50px;
-    
- }
- ul{
-    display: flex;
-    list-style: none;
-    justify-content: space-evenly;
-    
+  padding: 50px;
 
 }
-a {
+
+.footer ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+}
+
+.footer a {
   color: #fff;
   text-decoration: none;
   position: relative;
 }
-a::after {
+
+.footer a::after {
   content: "";
   display: block;
   position: absolute;
   left: 0;
-  bottom: -2px;
+  bottom: -5px;
   width: 0;
   height: 2px;
   background: #fff;
   transition: width 0.2s;
 }
-a:hover::after {
+
+.footer a:hover::after {
   width: 15px;
 }
 
-.copyright {
-    text-align: center;
-    margin-top:100px;
+.footer .copyright {
+  text-align: center;
+  color: #6a6a6a;
+  margin-top: 100px;
 
 }
-.logo{
-    color:red;
+
+.footer .logo {
+  color: #fff;
+  letter-spacing: 3px;
+}
+
+@media (max-width: 768px) {
+  .footer ul {
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0px;
+  }
+
+  .footer ul li {
+    margin-bottom: 20px;
+  }
+
+  .footer h3 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
 }
