--- a/src/style/Navbar.module.css
+++ b/src/style/Navbar.module.css
@@ -1,37 +1,52 @@
-.header{
-    
-    padding:20px;
-    background-color: #000;
-    color:#fff;
-    width:100%;
-    height : 50px;
+.header {
+  font-family: "Barlow", sans-serif;
+  padding: 20px;
+  background-color: #000;
+  width: 100%;
 }
-.logo{
-    color:red;
-}
- ul{
-    display: flex;
-    list-style: none;
-    justify-content: space-between;
-    
 
+.header .logo {
+  color: #fff;
+  transition: 0.3s;
+  font-size: 30px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
 }
-a {
+
+.header .logo:hover {
+  color: #afafaf;
+}
+
+.header ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.header a {
   color: #fff;
   text-decoration: none;
   position: relative;
+  transition: 0.3s;
 }
-a::after {
+
+.header a:hover {
+  color: #afafaf;
+}
+
+.header a::after{
   content: "";
   display: block;
   position: absolute;
   left: 0;
-  bottom: -2px;
+  bottom: -5px;
   width: 0;
   height: 2px;
   background: #fff;
-  transition: width 0.2s;
+  transition: width 0.3s;
 }
-a:hover::after {
-  width: 15px;
+
+.header a:hover::after {
+  width: 20px;
 }
