--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ border: 3px solid #eee !important;
 }
 
 .btn-17,
-.btn-17 .text-container {
+.btn-17 .textContainer {
   overflow: hidden;
   position: relative;
 }
