--- a/src/style/Detailsvilla.module.css
+++ b/src/style/Detailsvilla.module.css
@@ -138,7 +138,7 @@
     /* Main Content */
     .details-content {
         display: grid;
-        grid-template-columns: 1fr 400px;
+        grid-template-columns: 1210px;
         gap: 40px;
         max-width: 1400px;
         margin: 0 auto;
@@ -804,12 +804,76 @@
     }
 }
 
+@-webkit-keyframes move-up-alternate {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(80%);
+    }
+
+    51% {
+        transform: translateY(-80%);
+    }
+
+    to {
+        transform: translateY(0);
+    }
+}
+
 @keyframes move-up-alternate {
     0% {
         transform: translateY(0);
     }
 
-    100% {
-        transform: translateY(-300%);
+    50% {
+        transform: translateY(80%);
+    }
+
+    51% {
+        transform: translateY(-80%);
+    }
+
+    to {
+        transform: translateY(0);
+    }
+}
+
+.quick-actions span,
+.details-header span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quick-actions span .text,
+.details-header span .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.quick-actions span .text:hover,
+.details-header span .text:hover {
+    animation: move-up-alternate 0.3s forwards;
+}
+
+@keyframes move-up-alternate {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(80%);
+    }
+
+    51% {
+        transform: translateY(-80%);
+    }
+
+    to {
+        transform: translateY(0);
     }
 }
