--- a/src/style/Navbar.module.css
+++ b/src/style/Navbar.module.css
@@ -5,19 +5,20 @@
   width: 100%;
   height: 80px;
   position: relative;
-  display:flex;
-  justify-content: space-between;
+  /* display:flex;
+  justify-content: center;
+  align-items: center; */
   font-size: 20px;
-  
 }
 .logos{
   display:none;
 }
 
 img {
-  width: 80px;
-  height: 80px;
-  margin-top: -20px;
+  width: 90px;
+  /* height: 90px; */
+  margin-top: 0px;
+  margin-left: 0px;
 }
 
 .header .logo:hover {
@@ -26,8 +27,8 @@ img {
 
 .navbarTop {
   display: flex;
-  /* justify-content: space-between; */
-  /* align-items: center; */
+  justify-content: space-between; 
+  align-items: center;
 }
 
 .menuIcon {
@@ -45,12 +46,13 @@ img {
 
 .navLinks {
   display: flex;
-  gap: 140px;
+  align-items: center; 
+  justify-content: space-around;
+  gap: 50px;
   list-style: none;
-  margin: 0;
-  margin-right: 100px;
+  margin: -20px;
+  /* margin-right: 100px; */
   padding: 0;
-  /* align-items: center;  */
 }
 
 .navLinks li a {
@@ -83,11 +85,12 @@ img {
 @media (max-width: 768px) {
   .navbarTop {
     text-align:center !important;
+    margin: -20px;
   }
   .logos{
   display:block;
   text-align:center;
-  margin-left:100px;
+  /* margin-left:100px; */
   
 }
 .logo{
@@ -95,15 +98,15 @@ img {
 }
   .menuIcon {
     display: block;
-    margin-left: 100px;
+    margin-right: 10px;
   }
 
   .navContainer {
     position: fixed;
     top: 0;
-    left: 100%;
-    width: 70%;
-    height: 75vh;
+    left: 100%; /* Can we use delete this */
+    width: 70%; /* Can we use 100%, that's better */ 
+    height: 75vh; /* Can we use 100vh */
     background-color: #000;
     padding-top: 80px;
     transition: all 0.5s ease;
