Enahnce Nav and Buttons

--- a/src/style/Department.module.css
+++ b/src/style/Department.module.css
@@ -183,14 +183,39 @@
     color: var(--c-2);
   }
 
-  .clear-filters {
-    border: 2px solid var(--c-2) !important;
-    color: var(--c-2);
+  .clear-filters:hover {
+    animation: move-up-alternate 0.3s forwards;
   }
 
-  .clear-filters:hover {
-    background-color: var(--c-2) !important;
-    color: var(--c-1) !important;
+
+  /* Animations */
+  @keyframes appear {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes move-up-alternate {
+    0% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(80%);
+    }
+
+    51% {
+      transform: translateY(-80%);
+    }
+
+    to {
+      transform: translateY(0);
+
+    }
   }
 
   /* Properties Grid */
