--- a/src/style/Detailsdepartment.module.css
+++ b/src/style/Detailsdepartment.module.css
@@ -761,7 +761,7 @@
 }
 
 .btn-17,
-.btn-17 .textContainer {
+.btn-17 .text-container {
     overflow: hidden;
     position: relative;
 }
@@ -791,10 +791,11 @@
     left: calc(-50% - 50% * var(--skew));
     pointer-events: none;
     position: absolute;
-    top: -104%;
+    top: -103%;
     transform: skew(calc(150deg * var(--skew))) translateY(var(--progress, 0));
     transition: transform 0.2s ease;
-    width: 100%;
+    width: 102%;
+
 }
 
 .btn-17:after {
@@ -823,12 +824,40 @@
     }
 }
 
+.quick-actions span,
+.details-header span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quick-actions span .text,
+.details-header span .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.quick-actions span .text:hover,
+.details-header span .text:hover {
+    animation: move-up-alternate 0.3s forwards;
+}
+
 @keyframes move-up-alternate {
     0% {
         transform: translateY(0);
     }
 
+    50% {
+        transform: translateY(80%);
+    }
+
+    51% {
+        transform: translateY(-80%);
+    }
+
     100% {
-        transform: translateY(-300%);
+        transform: translateY(0%);
     }
 }
