--- a/src/style/Navbar.module.css
+++ b/src/style/Navbar.module.css
@@ -3,23 +3,23 @@
   padding: 20px;
   background-color: #000;
   width: 100%;
-  height: 80px;
-  position: sticky;
-  top: 0;
-  z-index: 100000000;
-  display:flex;
-  justify-content: space-between;
+  /* height: 80px; */
+  position: relative;
+  /* display:flex;
+    justify-content: center;
+    align-items: center; */
   font-size: 20px;
-  
 }
-.logos{
-  display:none;
+
+.logos {
+  display: none;
 }
 
 img {
-  width: 80px;
-  height: 80px;
-  margin-top: -20px;
+  width: 90px;
+  /* height: 90px; */
+  margin-top: 0px;
+  margin-left: 0px;
 }
 
 .header .logo:hover {
@@ -28,8 +28,8 @@ img {
 
 .navbarTop {
   display: flex;
-  /* justify-content: space-between;  */
-   /* align-items: center; */
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menuIcon {
@@ -47,12 +47,13 @@ img {
 
 .navLinks {
   display: flex;
-  gap: 140px;
+  align-items: center;
+  justify-content: space-around;
+  gap: 50px;
   list-style: none;
-  margin: 0;
-  margin-right: 100px;
+  margin: -20px;
+  /* margin-right: 100px; */
   padding: 0;
-  /* align-items: center;  */
 }
 
 .navLinks li a {
@@ -84,28 +85,34 @@ img {
 
 @media (max-width: 768px) {
   .navbarTop {
-    text-align:center !important;
+    text-align: center !important;
+    margin: -20px;
   }
-  .logos{
-  display:block;
-  text-align:center;
-  margin-left:100px;
-  
-}
-.logo{
-  display: none;
-}
+
+  .logos {
+    display: block;
+    text-align: center;
+    /* margin-left: 100px; */
+  }
+
+  .logo {
+    display: none;
+  }
+
   .menuIcon {
     display: block;
-    margin-left: 100px;
+    margin-right: 10px;
   }
 
   .navContainer {
     position: fixed;
     top: 0;
     left: 100%;
+    /* Can we use delete this */
     width: 70%;
+    /* Can we use 100%, that's better */
     height: 75vh;
+    /* Can we use 100vh */
     background-color: #000;
     padding-top: 80px;
     transition: all 0.5s ease;
