--- a/src/style/Footer.module.css
+++ b/src/style/Footer.module.css
@@ -4,15 +4,14 @@
   background-color: #000;
   color: #fff;
   width: 100%;
-
   padding: 50px;
-
 }
 
 .footer ul {
   display: flex;
   list-style: none;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer a {
