--- a/src/style/Footer.module.css
+++ b/src/style/Footer.module.css
@@ -10,8 +10,9 @@
 .footer ul {
   display: flex;
   list-style: none;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  margin-bottom: 0;
 }
 
 .footer a {
@@ -39,13 +40,20 @@
 .footer .copyright {
   text-align: center;
   color: #6a6a6a;
-  margin-top: 100px;
+  margin-top: 50px;
 
 }
 
 .footer .logo {
   color: #fff;
   letter-spacing: 3px;
+}
+
+.footer h3 {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
