--- a/src/style/Team.css
+++ b/src/style/Team.css
@@ -8,9 +8,17 @@
 }
 
 @keyframes backgroundMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .team-section h2 {
@@ -24,7 +32,6 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
-
 
 .team-card {
   position: relative;
@@ -40,6 +47,7 @@
   align-items: center;
   padding: 15px;
 }
+
 .team-card:hover {
   transform: translateY(-8px);
   box-shadow: 0 6px 18px rgba(6, 5, 5, 0.12);
@@ -51,16 +59,14 @@
   height: 250px;
   display: flex;
   justify-content: center;
-  
 }
 
 .image-container img {
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
   object-fit: contain;
   border-radius: 20px;
 }
-
 
 .overlay {
   position: absolute;
@@ -68,16 +74,14 @@
   left: 0;
   width: 100%;
   padding: 12px 10px;
-  
   text-align: center;
   opacity: 0;
   transform: translateY(20px);
   transition: all 0.3s ease;
   color: white;
-  border-radius: 10px; 
-overflow: hidden; 
-background: rgba(255, 255, 255, 0.05); 
-
+  border-radius: 10px;
+  overflow: hidden;
+  background: rgba(255, 255, 255, 0.05);
   background: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(10px);
 }
@@ -86,7 +90,6 @@ background: rgba(255, 255, 255, 0.05);
   opacity: 1;
   transform: translateY(0);
 }
-
 
 .social-icons {
   margin-top: 10px;
