style(about-page): Change font weight for title text

--- a/src/style/About.css
+++ b/src/style/About.css
@@ -12,7 +12,7 @@
   color: white;
   font-size: 2.5rem;
   letter-spacing: 0.2em;
-  font-weight: 300;
+  font-weight: 350;
 }
 
 /* Our Service Section */
@@ -62,14 +62,16 @@
   gap: 30px;
 }
 
+
+
 .arrow-left,
 .arrow-right {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-20%);
   width: 50px;
   height: 50px;
-  background-color: rgb(40, 39, 39);
+  background-color: rgb(47, 46, 46);
   color: white;
   border-radius: 50%;
   display: flex;
@@ -80,7 +82,10 @@
   transition: background-color 0.3s;
   z-index: 10;
   font-size: 2.2rem;
-  padding: 0;
+  padding: 4px;
+  padding-top: 0px;
+  padding-bottom: 7px;
+  
 }
 
 .arrow-left {
@@ -109,13 +114,14 @@
 .slider-title {
   font-size: 1.5rem;
   letter-spacing: 0.3em;
-  font-weight: 300;
+  
   margin: 0;
   min-width: 140px;
   white-space: nowrap;
   flex-shrink: 0;
   text-align: left;
   color: #111;
+  font-weight: 370;
 }
 
 .slider-text {
